--- a/it.unibo.radarSystem22/build.gradle
+++ b/it.unibo.radarSystem22/build.gradle
@@ -9,19 +9,27 @@ plugins {
     id 'java'
     id 'eclipse'
     id 'application'
-        id 'jacoco'
+    id 'jacoco'
 }
 
 version '1.0'
 sourceCompatibility = 1.8
 
 repositories {
-    jcenter()
+    mavenCentral()
     flatDir { dirs '../unibolibs' }
+    flatDir { dirs './libs' }
 }
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
+
+//JSON
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation group: 'org.json', name: 'json', version: '20160810'
+
+//CUSTOM RadarSystem
+	implementation name: 'it.unibo.radarSystem22.domain-1.0'
 
 //CUSTOM unibo
     implementation name: '2p301'
@@ -45,18 +53,19 @@ eclipse {
     }
 }
 
-mainClassName = 'it.unibo.xxx'  //TODO
+mainClassName = 'it.unibo.radarSystem22.sprint1.RadarSystemSprint1Main'  
 
 jar {
     from sourceSets.main.allSource
     manifest {
         attributes 'Main-Class': "$mainClassName"
-    }
+	}
 }
 distributions {
     main {
         contents {
             from './RadarSystemConfig.json'
+            from './DomainSystemConfig.json'
         }
     }
 }
