--- a/it.unibo.radarSystem22/.classpath
+++ b/it.unibo.radarSystem22/.classpath
@@ -24,6 +24,11 @@
 			<attribute name="gradle_used_by_scope" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/loris/Desktop/lorisIssLab2022/it.unibo.radarSystem22/libs/it.unibo.comm2022-1.0.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value=""/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/home/loris/Desktop/lorisIssLab2022/unibolibs/2p301.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value=""/>
