--- a/it.unibo.radarSystem22/DomainSystemConfig.json
+++ b/it.unibo.radarSystem22/DomainSystemConfig.json
@@ -18,7 +18,7 @@
 "mqttBrokerAddr"   : "tcp://localhost:1883",
 "tempBrokerAddr"   : "tcp://broker.hivemq.com",
 
-"simulation"       : "true",
+"simulation"       : "false",
 "sonarDistanceMax" : "150",
 "sonarDelay"       : "200",
 "DLIMIT"           : "70",
